--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Official Moncreneau API client for Node.js",
   "main": "index.js",
   "scripts": {
+    "build": "tsc",
     "test": "echo \"No tests specified\" && exit 0"
   },
   "keywords": [
