--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "@moncreneau/api",
   "version": "2.0.0",
   "description": "Official Moncreneau API client for Node.js",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
+    "prepublishOnly": "npm run build",
     "test": "echo \"No tests specified\" && exit 0"
   },
   "keywords": [
@@ -25,12 +27,16 @@
   },
   "homepage": "https://github.com/nbsidiki/moncreneau-node#readme",
   "files": [
-    "index.js",
+    "dist",
     "README.md",
     "LICENSE"
   ],
   "dependencies": {
     "axios": "^1.6.0"
+  },
+  "devDependencies": {
+    "@types/node": "^20.0.0",
+    "typescript": "^5.0.0"
   },
   "engines": {
     "node": ">=12.0.0"
